BlueGreen or Canary deployment/blue-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: blue-service
spec:
  selector:
    app: myapp
    version: blue
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
