BlueGreen or Canary deployment/green-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: green-service
spec:
  selector:
    app: myapp
    version: green
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
